apps/heimdall/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: heimdall
  namespace: heimdall
spec:
  internalTrafficPolicy: Cluster
  ports:
  - name: http
    port: 80
    targetPort: http
  selector:
    app: heimdall
