apps/heimdall/base/vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: heimdall
  namespace: heimdall
spec:
  hosts:
  - "heimdall.k8s.homelab.local"
  gateways:
  - istio-system/istio-gateway
  http:
  - route:
    - destination:
        port:
          number: 80
        host: heimdall
